Complete styles, images and text

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     max-height: 50px;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     padding-left: 100px;
     padding-right: 100px;
 }
@@ -32,6 +32,7 @@ ul {
 .header_logo {
     height: 50px;
     width: 50px;
+    margin-right: 20px;
 }
 
 a {
@@ -44,9 +45,7 @@ a {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-bottom: 100px;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding: 50px;
 }
 
 .card1 {
@@ -58,6 +57,7 @@ a {
     justify-content: space-around;
     align-items: left;
     margin-right: 20px;
+    margin-bottom: 20px;
 }
 
 .cd1_header {
@@ -73,7 +73,7 @@ a {
     font-size: 16px;
     font-weight: bold;
     background-color: #3882F6;
-    color: #F9FAF8;
+    color: white;
     border: none;
     border-radius: 10px;
     display: flex;
@@ -87,23 +87,132 @@ a {
 .c1_image {
     width: 600px;
     height: auto;
+    margin-right: 20px;
 }
 
 .content2 {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    padding-bottom: 100px;
+    padding: 50px;
     background-color: #F9FAF8;
+    flex-wrap: wrap;
 }
 
 .c2_header {
     font-size: 36px;
     font-weight: bolder;
     align-self: center;
-    margin: 50px;
+    margin: 0px 50px 50px;
 }
 
 .card2 {
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.c2_pack {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.c2_image {
+    width: 180px;
+    height: 180px;
+    border: 4px solid #3882F6;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 10px;
+}
+
+.c2_text {
+    max-width: 300px;
+    margin: 20px 20px;
+    font-size: small;
+    text-align: center;
+}
+
+.content3 {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    padding: 100px 50px 50px;
+    align-items: center;
+}
+
+.c3_text {
+    font-size: 36px;
+    font-weight: lighter;
+    max-width: 1100px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.c3_signature {
+    font-size: 24px;
+    font-weight: bold;
+    align-self: flex-end;
+    margin-top: 50px;
+}
+
+.content4 {
+    background-color: #F9FAF8;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.container4 {
+    display: flex;
+    background-color: #3882F6;
+    border-radius: 20px;
+    width: 1200px;
+    height: 200px;
+    justify-content: space-around;
+    align-items: center;
+    padding: 25px;
+}
+
+.card4 {
+    color: #F9FAF8;
+    margin-right: 50px;
+}
+
+.cd4_header {
+    font-weight: bold;
+    font-size: 32px;
+    margin-bottom: 10px;
+}
+
+.cd4_text {
+    font-size: 24px;
+    font-weight: lighter;
+}
+
+.bt_contact {
+    border: 2px solid #F9FAF8;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 16px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.footer {
+    display: flex;
+    padding: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.copyright {
+    font-size: 18px;
+    font-weight: lighter;
+    color: #F9FAF8;
 }
