--- a/styles.css
+++ b/styles.css
@@ -173,15 +173,16 @@ a {
     background-color: #3882F6;
     border-radius: 20px;
     width: 1200px;
-    height: 200px;
+    height: 120px;
     justify-content: space-around;
     align-items: center;
-    padding: 25px;
+    padding: 20px;
 }
 
 .card4 {
     color: #F9FAF8;
-    margin-right: 50px;
+    margin-right: 20px;
+    min-width: 200px;
 }
 
 .cd4_header {
